BPER/DEVF/force-app/main/default/objects/Funzionalita__c/Funzionalita__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Funzionalità</label>
</CustomObject>