BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_AccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_AccountTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Account</label>
    <type>Checkbox</type>
</CustomField>