BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_AssignmentTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_AssignmentTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Assignment</label>
    <type>Checkbox</type>
</CustomField>