BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_CampaignMemberTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_CampaignMemberTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Campaign Member Trigger</label>
    <type>Checkbox</type>
</CustomField>