BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_CaseTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_CaseTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Case</label>
    <type>Checkbox</type>
</CustomField>