BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_ContactTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_ContactTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Contact</label>
    <type>Checkbox</type>
</CustomField>