BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_ElaborazioneProcessoTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_ElaborazioneProcessoTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Elaborazione Processo</label>
    <type>Checkbox</type>
</CustomField>