BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_EventTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_EventTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Event</label>
    <type>Checkbox</type>
</CustomField>