BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_FinancialAccountTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_FinancialAccountTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Financial Account</label>
    <type>Checkbox</type>
</CustomField>