BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_Flow__c.field-meta.xml
<CustomField>
    <fullName>Disable_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Flow</label>
    <type>Checkbox</type>
</CustomField>