BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_Integrazione_Anagrafe__c.field-meta.xml
<CustomField>
    <fullName>Disable_Integrazione_Anagrafe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Integrazione Anagrafe</label>
    <type>Checkbox</type>
</CustomField>