BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_InvioEmail__c.field-meta.xml
<CustomField>
    <fullName>Disable_InvioEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Invio Email</label>
    <type>Checkbox</type>
</CustomField>