BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_LDAPTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_LDAPTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable LDAP</label>
    <type>Checkbox</type>
</CustomField>