BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_OpportunityTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_OpportunityTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Opportunity</label>
    <type>Checkbox</type>
</CustomField>