BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_ProcessBuilder__c.field-meta.xml
<CustomField>
    <fullName>Disable_ProcessBuilder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Process Builder</label>
    <type>Checkbox</type>
</CustomField>