BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_RelazioneDiCointestazioneTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_RelazioneDiCointestazioneTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Relazione Di Cointestazione</label>
    <type>Checkbox</type>
</CustomField>