BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_ScheduledJobTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_ScheduledJobTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Scheduled Job</label>
    <type>Checkbox</type>
</CustomField>