BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_StrutturaBancaTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_StrutturaBancaTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Struttura Banca</label>
    <type>Checkbox</type>
</CustomField>