BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_TaskTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_TaskTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Task</label>
    <type>Checkbox</type>
</CustomField>