BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_UserTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_UserTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable User</label>
    <type>Checkbox</type>
</CustomField>