BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_ValidationRules__c.field-meta.xml
<CustomField>
    <fullName>Disable_ValidationRules__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Validation Rules</label>
    <type>Checkbox</type>
</CustomField>