BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_WalletTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_WalletTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Wallet</label>
    <type>Checkbox</type>
</CustomField>