BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_Workflow__c.field-meta.xml
<CustomField>
    <fullName>Disable_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Workflow</label>
    <type>Checkbox</type>
</CustomField>