BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/Disable_WorkOrderTrigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_WorkOrderTrigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable WorkOrder</label>
    <type>Checkbox</type>
</CustomField>