BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/isETL__c.field-meta.xml
<CustomField>
    <fullName>isETL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isETL</label>
    <type>Checkbox</type>
</CustomField>