BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/isMC__c.field-meta.xml
<CustomField>
    <fullName>isMC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMC</label>
    <type>Checkbox</type>
</CustomField>