BPER/DEVF/force-app/main/default/objects/Funzionalita__c/fields/isUnecapi__c.field-meta.xml
<CustomField>
    <fullName>isUnecapi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isUnecapi</label>
    <type>Checkbox</type>
</CustomField>